--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -1790,9 +1790,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "#initialize \n",
     "#i...j\n",
@@ -1808,6 +1820,7 @@
     "        while(j<len(s)):\n",
     "            ch = s[j]\n",
     "            if ch in D:\n",
+    "                \n",
     "                max_l=max(max_l,j-i)\n",
     "                i=D[ch]+1\n",
     "                for c in list(D):\n",
@@ -2775,7 +2788,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #BFS Minidepth Solution #Both solutions work\n",
+    "# #BFS Minidepth Solution #All solutions work #first two are iterative \n",
     "def minDepth(self, root):\n",
     "        Q = []\n",
     "        if root:\n",
@@ -2798,6 +2811,40 @@
     "\n",
     "        return depth\n",
     "\n",
+    "    \n",
+    "    \n",
+    "class Solution(object):\n",
+    "    def minDepth(self, root):\n",
+    "        \n",
+    "        if root==None:\n",
+    "            return 0\n",
+    "        Q=[root]\n",
+    "        last = root\n",
+    "        current = None\n",
+    "        d=1\n",
+    "        while(Q):\n",
+    "            pop = Q.pop(0)\n",
+    "            \n",
+    "            if pop.left==None and pop.right ==None:\n",
+    "                return d\n",
+    "           \n",
+    "            if pop.left:\n",
+    "                Q.append(pop.left)\n",
+    "                current =pop.left\n",
+    "                \n",
+    "            if pop.right:\n",
+    "                Q.append(pop.right)\n",
+    "                current =pop.right\n",
+    "            \n",
+    "            if pop == last:\n",
+    "                \n",
+    "                d+=1\n",
+    "                last=current\n",
+    "                print(last.val)\n",
+    "        \n",
+    "        return d\n",
+    "            \n",
+    "            \n",
     "#DFS Minidepth Solution\n",
     "\n",
     "# Definition for a binary tree node.\n",
@@ -2821,7 +2868,32 @@
     "        if root.left and root.right :\n",
     "            return 1 + min(self.minDepth(root.left),self.minDepth(root.right))\n",
     "            \n",
-    "                \n",
+    "#iterative maxdepth\n",
+    "            \n",
+    "class Solution(object):\n",
+    "    def maxDepth(self, root):\n",
+    "        if root==None:\n",
+    "            return 0\n",
+    "        Q=[root]\n",
+    "        last = root\n",
+    "        current = None\n",
+    "        d=0\n",
+    "        while(Q):\n",
+    "            pop = Q.pop(0)\n",
+    "            if pop.left:\n",
+    "                Q.append(pop.left)\n",
+    "                current =pop.left\n",
+    "            if pop.right:\n",
+    "                Q.append(pop.right)\n",
+    "                current =pop.right\n",
+    "            # if pop.left==None and pop.right ==None:\n",
+    "            #     return d\n",
+    "            if pop == last:\n",
+    "                d+=1\n",
+    "                last=current\n",
+    "        return d\n",
+    "\n",
+    "            \n",
     "        \n"
    ]
   },
@@ -3777,7 +3849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3829,16 +3901,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 3]\n",
-      "[3, 2]\n",
-      "[1, 3, 2]\n"
+      "[1, 3, 2]\n",
+      "[2, 1, 3]\n",
+      "[2, 1, 3]\n"
      ]
     }
    ],
@@ -3870,7 +3942,7 @@
     "    \n",
     "            \n",
     "\n",
-    "print(nextPermutation([1,2,3]))#,5,2,1]))"
+    "print(nextPermutation([1,3,2]))#,5,2,1]))"
    ]
   },
   {
@@ -5358,6 +5430,420 @@
     "                \n",
     "        return res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Inorder Traversal\n",
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode(object):\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.left = None\n",
+    "#         self.right = None\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def inorderTraversal(self, root):\n",
+    "        \"\"\"\n",
+    "        :type root: TreeNode\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        res =[]\n",
+    "        \n",
+    "        if root:\n",
+    "            res+=self.inorderTraversal(root.left)\n",
+    "            res+=[root.val]\n",
+    "            res+=self.inorderTraversal(root.right)\n",
+    "        return res\n",
+    "\n",
+    "#iterative\n",
+    "\n",
+    "def inorderTraversal(self, root):\n",
+    "    stack =[] \n",
+    "    current =root\n",
+    "    res = []\n",
+    "\n",
+    "    while(stack or current):\n",
+    "        while current:\n",
+    "            stack.append(current)\n",
+    "            current=current.left\n",
+    "\n",
+    "        current = stack.pop()\n",
+    "        res.append(current.val)\n",
+    "        current=current.right\n",
+    "\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5,6]\n",
+    "print(a[len(a)-3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # Definition for a binary tree node.\n",
+    "# class TreeNode(object):\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.left = None\n",
+    "#         self.right = None\n",
+    "#105. Construct Binary Tree from Preorder and Inorder Traversal\n",
+    "class Solution(object):\n",
+    "    def buildTree(self, preorder, inorder):\n",
+    "        if len(preorder)!=len(inorder) or len(preorder)==0 or len(inorder)==0:\n",
+    "            return None\n",
+    "        root = TreeNode(preorder[0])\n",
+    "        curr = preorder[0]\n",
+    "        pos=-1\n",
+    "        for i in range(len(inorder)):\n",
+    "            if curr==inorder[i]:\n",
+    "                pos = i\n",
+    "                break\n",
+    "        i=pos \n",
+    "        l = len(inorder[:i])  \n",
+    "        if l>0:\n",
+    "            root.left = self.buildTree(preorder[1:l+1],inorder[:i])\n",
+    "        else:\n",
+    "            root.left = None\n",
+    "        l=len(inorder[i+1:])\n",
+    "        if l >0:\n",
+    "            root.right = self.buildTree(preorder[len(preorder)-l:],inorder[i+1:])\n",
+    "        else:\n",
+    "            root.right =None\n",
+    "        return root\n",
+    "    \n",
+    "    \n",
+    "# Definition for a binary tree node.\n",
+    "# class TreeNode(object):\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.left = None\n",
+    "#         self.right = None\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def buildTree(self, preorder, inorder):\n",
+    "        \n",
+    "        \n",
+    "        if inorder:\n",
+    "            ind = inorder.index(preorder.pop(0))\n",
+    "            root = TreeNode(inorder[ind])\n",
+    "            root.left = self.buildTree(preorder, inorder[0:ind])\n",
+    "            root.right = self.buildTree(preorder, inorder[ind+1:])\n",
+    "            return root   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2\n",
+      "3 4 6\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts=[2,2,2,2]\n",
+    "counts=[3,3,3,3,3,1,3]\n",
+    "def socialGraphs(counts):\n",
+    "    D={}\n",
+    "    \n",
+    "    for i in range(len(counts)):\n",
+    "        if counts[i] in D:\n",
+    "            D[counts[i]].append(i)\n",
+    "        else:\n",
+    "            D[counts[i]]=[i]\n",
+    "            \n",
+    "    res=[]\n",
+    "    keylist = list(D.keys())\n",
+    "   # keylist.sort(reverse=True)\n",
+    "    \n",
+    "    for key in keylist:\n",
+    "        grpsize= key\n",
+    "        \n",
+    "        for i in range(0,len(D[key]),key):\n",
+    "            res.append(D[key][i:key+i])\n",
+    "            \n",
+    "    \n",
+    "    res.sort(key=lambda a: a[0])\n",
+    "    ans=[]\n",
+    "    for i in range(len(res)):\n",
+    "       \n",
+    "        res[i] = [str(a) for a in res[i]]\n",
+    "        \n",
+    "        ans=' '.join(res[i])\n",
+    "        print(ans)\n",
+    "socialGraphs(counts) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 20, 10]\n",
+      "[15, 10, 10]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-48-bc21fda824bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mminSum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnums\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-48-bc21fda824bc>\u001b[0m in \u001b[0;36mminSum\u001b[0;34m(nums, k)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<=\u001b[0m\u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnums\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m             \u001b[0mj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnums\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "def minSum(nums,k):\n",
+    "    j =0\n",
+    "    nums.sort(reverse=True)\n",
+    "    for i in range(k):\n",
+    "      #  nums.sort(reverse=True)\n",
+    "        \n",
+    "        if nums[j]%2==0:\n",
+    "            nums[j]=nums[j]//2\n",
+    "        else:\n",
+    "            nums[j]=(nums[j]+1)//2\n",
+    "        \n",
+    "        if nums[j]<=nums[j+1] and j<len(nums)-1:\n",
+    "            j=j+1        \n",
+    "        print(nums)\n",
+    "    return sum(nums)\n",
+    "nums=[10,20,30]        \n",
+    "k=4\n",
+    "minSum(nums,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "insert() takes exactly 2 arguments (1 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-93939ce2cfd9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: insert() takes exactly 2 arguments (1 given)"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2]\n",
+    "a.insert(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(n,a,formations,win):\n",
+    "    D={'PS' : 'S', 'SR' : 'R', 'RP' : 'P', 'SP' : 'S', 'RS' : 'R', 'PR' : 'P'}\n",
+    "    formation=\"\"\n",
+    "    for i in range(0,len(formations),2):\n",
+    "\n",
+    "        if formations[i:i+2] in D or formations[i:i+2][::-1] in D:\n",
+    "            formation+= D[formations[i:i+2]]\n",
+    "\n",
+    "    if a%==1:\n",
+    "        if formations[a]!=D[formations[a-1:a+1]]:\n",
+    "            win.append(D[formations[a-1:a+1]])\n",
+    "    else:\n",
+    "        if formations[a]!=D[formations[a:a+1]]:\n",
+    "            win.append(D[formations[a:a+1]])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    return f(n/2,a/2,formations,win)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "string=\"#\"\n",
+    "print(string[:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0}\n",
+      "0\n",
+      "{0, 1}\n",
+      "2\n",
+      "{0, 1, 3}\n",
+      "6\n",
+      "{1, 2, 6}\n",
+      "14\n",
+      "{4, 2, 12, 5}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums=[5,12,4,2]\n",
+    "def findMaximumXOR(nums):\n",
+    "    \n",
+    "    answer = 0\n",
+    "    for i in range(32)[::-1]:\n",
+    "        \n",
+    "        answer <<= 1\n",
+    "        print(answer)\n",
+    "        prefixes = {num >> i for num in nums}\n",
+    "        print(prefixes)\n",
+    "        answer += any(answer^1 ^ p in prefixes for p in prefixes)\n",
+    "    return answer\n",
+    "\n",
+    "findMaximumXOR(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer =0\n",
+    "answer<<=1\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
