--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -299,6 +306,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def preorder(self, root):\n",
+    "    \"\"\"\n",
+    "    :type root: Node\n",
+    "    :rtype: List[int]\n",
+    "    \"\"\"\n",
+    "    if (root == None):\n",
+    "        return []\n",
+    "\n",
+    "    l, stack = [], []\n",
+    "    stack.append(root)\n",
+    "\n",
+    "    while stack:\n",
+    "        root = stack.pop(0)\n",
+    "        if (root != None):\n",
+    "            l.append(root.val)\n",
+    "        i=0  \n",
+    "        for x in root.children:\n",
+    "            stack.insert(i,x)\n",
+    "            i=i+1\n",
+    "\n",
+    "    return l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def inorderTraversal(self, root):\n",
+    "        stack =[] \n",
+    "        current =root\n",
+    "        res = []\n",
+    "        \n",
+    "        while(stack or current):\n",
+    "            while current:\n",
+    "                stack.append(current)\n",
+    "                current=current.left\n",
+    "\n",
+    "            current = stack.pop()\n",
+    "            res.append(current.val)\n",
+    "            current=current.right\n",
+    "           \n",
+    "        return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    \n",
     "def checkPossibility(self, nums):\n",
     "\"\"\"\n",
@@ -401,9 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 2]\n"
+     ]
+    }
+   ],
    "source": [
     " def rotate(nums, k):\n",
     "        l = len(nums)\n",
@@ -412,7 +479,8 @@
     "            num = nums[l-1]\n",
     "            nums.insert(0,num)\n",
     "            nums.pop(l)\n",
-    "        "
+    "        print(nums)\n",
+    "rotate([1,2,3],1)        "
    ]
   },
   {
@@ -2405,6 +2473,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 162,
    "metadata": {},
    "outputs": [
@@ -3814,7 +3889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3823,7 +3898,7 @@
        "2"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3909,7 +3984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3943,7 +4018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -6835,6 +6910,204 @@
     "    return cells\n",
     "cells= [0,1,0,1,1,0,0,1]\n",
     "prisonAfterNDays(cells, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PathAI\n",
+    "\n",
+    "def weighted_iou(mat, queries):\n",
+    "    res=[]\n",
+    "    for q in queries:\n",
+    "        res.append(find_res(mat,q))\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "def find_res(mat,q):\n",
+    "    r1,r2=q\n",
+    "    i1,j1,i2,j2=r1\n",
+    "    i3,j3,i4,j4=r2\n",
+    "    \n",
+    "    intersection = get_intersection(mat, r1,r2)\n",
+    "    if intersection ==0:\n",
+    "        return 0\n",
+    "    union= get_union(mat, r1,r2,intersection) #A+B-intersection\n",
+    "    return intersection/union\n",
+    "\n",
+    "def get_intersection(mat,r1,r2):\n",
+    "    i1,j1,i2,j2=r1\n",
+    "    i3,j3,i4,j4=r2\n",
+    "    i5,j5 = max(i1,i3), max(j1,j3)\n",
+    "    i6,j6 = min(i2,i4), min(j2,j4)\n",
+    "    \n",
+    "    \n",
+    "    if i5 > i6 or j5>j6:\n",
+    "        return 0\n",
+    "    \n",
+    "    return get_area(mat, i5,j5, i6,j6)\n",
+    "\n",
+    "def get_union(mat,r1,r2,intersection):  \n",
+    "    i1,j1,i2,j2=r1\n",
+    "    i3,j3,i4,j4=r2\n",
+    "    return get_area(mat,i1,j1,i2,j2)+ get_area(mat,i3,j3,i4,j4)-intersection\n",
+    "    \n",
+    "    \n",
+    "def get_area(mat,ai,aj, bi,bj): \n",
+    "    A=0\n",
+    "    for i in range(ai, bi+1):\n",
+    "        for j in range(aj,bj+1):\n",
+    "            A+=mat[i][j]\n",
+    "    return A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26 42 30 38 50 35\n",
+      "221\n"
+     ]
+    }
+   ],
+   "source": [
+    "def weighted_iou(mat, queries):\n",
+    "    res=[]\n",
+    "    for q in queries:\n",
+    "        res.append(find_res(mat,q))\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "def find_res(mat,q):\n",
+    "    r1,r2=q\n",
+    "    i1,j1,i2,j2=r1\n",
+    "    i3,j3,i4,j4=r2\n",
+    " \n",
+    "    i5,j5 = max(i1,i3), max(j1,j3)\n",
+    "    i6,j6 = min(i2,i4), min(j2,j4)\n",
+    "    r3 = (i5,j5,i6,j6)\n",
+    "    \n",
+    "    intersection = get_intersection(mat,r3)\n",
+    "    if intersection ==0:\n",
+    "        return 0\n",
+    "    union= get_union(mat, r1,r2,r3,intersection) #A+B-intersection\n",
+    "    return intersection/union\n",
+    "\n",
+    "def get_intersection(mat,r3):\n",
+    "    i5,j5,i6,j6 = r3\n",
+    "    \n",
+    "    if i5 > i6 or j5>j6:\n",
+    "        return 0\n",
+    "    \n",
+    "    return get_area(mat, i5,j5, i6,j6)\n",
+    "\n",
+    "def get_union(mat,r1,r2,r3,intersection):  \n",
+    "    i1,j1,i2,j2=r1\n",
+    "    i3,j3,i4,j4=r2\n",
+    "    i5,j5,i6,j6 = r3\n",
+    "    \n",
+    "    if ((i1<=i3 and j1<=j3) or (i1>=i3 and j1>=j3)) and (((i2==i6)and(j2==j6)) or ((i4==i6)and(j4==j6))) :\n",
+    "        A1=get_area(mat,min(i1,i3),min(j1,j3),i5,j5)\n",
+    "        A6=get_area(mat,i6,j6,max(i2,i4),max(j2,j4))\n",
+    "        A2=get_area(mat,i5,min(j1,j3),i6,j5)\n",
+    "        A3=get_area(mat,min(i1,i3),j5,i5,j6)\n",
+    "        A4=get_area(mat, i6,j5,max(i2,i4),j6)\n",
+    "        A5=get_area(mat, i5,j6,i6, max(j2,j4))\n",
+    "        print(A1,A2,A3,A4,A5,A6)\n",
+    "        return A1+A2+A3+A4+A5+A6+intersection\n",
+    "    \n",
+    "#        return get_area(mat,i1,j1,i2,j2)+ get_area(mat,i3,j3,i4,j4)-intersection\n",
+    "\n",
+    "    if (i1==i5 and j1==j5 and i2==i6 and j2==j6):\n",
+    "        return get_area(mat,i3,j3,i4,j4)\n",
+    "    if (i2==i5 and j2==j5 and i4==i6 and j4==j6):\n",
+    "        return get_area(mat,i1,j1,i2,j2)\n",
+    "    \n",
+    "    return get_area(mat,i1,j1,i2,j2)+ get_area(mat,i3,j3,i4,j4)-intersection\n",
+    "    \n",
+    "    \n",
+    "def get_area(mat,ai,aj, bi,bj): \n",
+    "    A=0\n",
+    "    for i in range(ai, bi+1):\n",
+    "        for j in range(aj,bj+1):\n",
+    "            A+=mat[i][j]\n",
+    "    return A\n",
+    "            \n",
+    "\n",
+    "                \n",
+    "\n",
+    "mat = [[4,5,6,7],[8,9,10,11],[12,13,14,15],[4,5,6,0]]\n",
+    "r1 = (0,0,2,2)\n",
+    "r2 = (1,1,3,3)\n",
+    "r3 = (1,1,2,2)\n",
+    "print(get_union(mat,r1,r2,r3,0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['c', '2']\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def compress(chars):\n",
+    "\n",
+    "\n",
+    "    new_array =[]\n",
+    "    curr = chars[0]\n",
+    "    pos = 0\n",
+    "    count =1\n",
+    "    new_array.append(curr)\n",
+    "    for i in range(1,len(chars)):\n",
+    "\n",
+    "        char = chars[i]\n",
+    "        if curr==char:\n",
+    "            count+=1\n",
+    "        else:\n",
+    "            if count>1:\n",
+    "                new_array.append(str(count))\n",
+    "\n",
+    "            curr=char\n",
+    "            new_array.append(curr)\n",
+    "            count=1\n",
+    "\n",
+    "            pos = i\n",
+    "    if count>1:                \n",
+    "        new_array.append(str(count))\n",
+    "    # print(new_array)\n",
+    "    ch = new_array[0]\n",
+    "    i=0\n",
+    "    pos = 0 \n",
+    "    while(i<len(new_array)):\n",
+    "        ch =new_array[i]\n",
+    "        # print(ch)\n",
+    "        L = len(ch)\n",
+    "        for j in range(L):\n",
+    "            # print(ch[j])\n",
+    "            chars[pos+j]= ch[j]\n",
+    "        pos+=L\n",
+    "        i=i+1\n",
+    "        # print(chars)\n",
+    "    print(chars)\n",
+    "    return pos\n",
+    "print(compress([\"c\",\"c\"]))"
    ]
   },
   {
