--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -2,14 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,10 +21,10 @@
     {
      "data": {
       "text/plain": [
-       "['s', 'p', 'l', 'i', 't']"
+       "[[1, 2], [3], [4], [5, 6, 2]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +54,42 @@
     "  \n",
     "result = map(lambda x, y: x + y, numbers1, numbers2) \n",
     "print(list(result))\n",
-    "list(\"split\")"
+    "list(\"split\")\n",
+    "\n",
+    "##Removing duplicates from a list of lists\n",
+    "k = [[1, 2], [4], [5, 6, 2], [1, 2], [3], [4]]\n",
+    "import itertools\n",
+    "k.sort()\n",
+    "list(k for k,_ in itertools.groupby(k))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d={\"A\":0, \"B\":0}\n",
+    "arr = [d.copy() for i in range(3)]\n",
+    "arr\n",
+    "d[\"A\"]=1\n",
+    "arr\n",
+    "\n",
+    "arr=[0]*5\n",
+    "arr[0]=1\n",
+    "arr\n",
+    "\n"
    ]
   },
   {
@@ -83,6 +111,29 @@
     "b=1\n",
     "a,b=b,a\n",
     "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=[{\"A\":0, \"B\":0} for i in range(3)]\n",
+    "arr[0][\"A\"]=1\n",
+    "arr\n",
+    "\n",
+    "a=[1,2,3]\n",
+    "a.pop()\n",
+    "print(a)"
    ]
   },
   {
@@ -134,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +194,7 @@
        "2"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +242,7 @@
      "output_type": "stream",
      "text": [
       "6\n",
-      "{('h', 'b'), ('t', 't'), ('i', 'i')}\n"
+      "{('i', 'i'), ('t', 't'), ('h', 'b')}\n"
      ]
     }
    ],
@@ -218,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -250,9 +301,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-3e914e1dc675>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict \n",
     "x = defaultdict(list)\n",
@@ -264,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -287,10 +357,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def postorder(self, root):\n",
+    "        \"\"\"\n",
+    "        :type root: Node\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        l=[]\n",
+    "        if root!=None: \n",
+    "            if root.children:\n",
+    "                for child in root.children :\n",
+    "                    l+=self.postorder(child)\n",
+    "            \n",
+    "                return l+[root.val]\n",
+    "            else:\n",
+    "                return [root.val]\n",
+    "            \n",
     "def postorder(root):\n",
     "    \"\"\"\n",
     "    :type root: Node\n",
@@ -310,28 +398,12 @@
     "            stack.append(x)\n",
     "    return l[::-1]\n",
     "\n",
-    "\n",
-    "class Solution(object):\n",
-    "    def postorder(self, root):\n",
-    "        \"\"\"\n",
-    "        :type root: Node\n",
-    "        :rtype: List[int]\n",
-    "        \"\"\"\n",
-    "        l=[]\n",
-    "        if root!=None: \n",
-    "            if root.children:\n",
-    "                for child in root.children :\n",
-    "                    l+=self.postorder(child)\n",
-    "            \n",
-    "                return l+[root.val]\n",
-    "            else:\n",
-    "                return [root.val]\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +432,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 0]\n",
+      "[0, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stack = [0]\n",
+    "i=0\n",
+    "for x in [1,2,3]:\n",
+    "    stack.insert(i,x)\n",
+    "    i+=1\n",
+    "print(stack)\n",
+    "\n",
+    "stack = [0]\n",
+    "for x in [1,2,3]:\n",
+    "    stack.append(x)\n",
+    "print(stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,16 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "    \n",
     "def checkPossibility(self, nums):\n",
-    "\"\"\"\n",
-    ":type nums: List[int]\n",
-    ":rtype: bool\n",
-    "\"\"\"\n",
+    "    \"\"\"\n",
+    "    :type nums: List[int]\n",
+    "    :rtype: bool\n",
+    "    \"\"\"\n",
     "    j = 0\n",
     "    p = -1\n",
     "    for i in range(0,len(nums)-1):\n",
@@ -415,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,18 +535,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reverse(120)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1534236469\n",
+      "2147483648\n"
+     ]
+    }
+   ],
    "source": [
     "y = 1534236469\n",
     "print(y)\n",
@@ -455,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -514,9 +634,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(6,1,-1):\n",
     "    print(i)"
@@ -524,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,9 +705,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[0, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [2,2]\n",
     "target = 2\n",
@@ -584,27 +725,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "print(nums[-2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@ Z\n"
+     ]
+    }
+   ],
    "source": [
     "print(chr(64),chr(64+26))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z\n"
+     ]
+    }
+   ],
    "source": [
     "string = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
     "print(string[25])"
@@ -612,9 +777,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({5: 2, 1: 1, 2: 1, 3: 1, 4: 1})\n"
+     ]
+    }
+   ],
    "source": [
     "import collections\n",
     "nums = [1,2,3,4,5,5]\n",
@@ -624,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -678,14 +851,14 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'yourString' is not defined",
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'replaceAll'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-2fc269a29c7b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myourString\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplaceAll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"[-+.^:,]\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"caca a car\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'yourString' is not defined"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-1dfc278673b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplaceAll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"[-+.^:,]\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"caca a car\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'replaceAll'"
      ]
     }
    ],
@@ -704,9 +877,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def isPalindrome(s):\n",
     "        \"\"\"\n",
@@ -742,9 +924,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-34-fc1564dbfb51>, line 35)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-fc1564dbfb51>\"\u001b[0;36m, line \u001b[0;32m35\u001b[0m\n\u001b[0;31m    elif (T== 'N'):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def robotSim(commands, obstacles):\n",
@@ -796,9 +987,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "1\n",
+      "-1\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "class Node_S(object):\n",
     "    def __init__(self, data, next_node=None):\n",
@@ -915,9 +1119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'h': 2, 'S': 1, 'i': 1, 'k': 1, 'a': 1})\n",
+      "Shi\n"
+     ]
+    }
+   ],
    "source": [
     "s = \"Shikha\"\n",
     "import collections\n",
@@ -928,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1802,13 +2015,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0]]\n",
       "3\n"
      ]
     }
@@ -1831,6 +2045,7 @@
     "            if (V[i][j]==1):\n",
     "                    DFS_visit(i,j,V)\n",
     "                    land+=1\n",
+    "#    print(V)\n",
     "    return land\n",
     "\n",
     "grid=[[1,1,0,0,0],[1,1,0,0,0],[0,0,1,0,0],[0,0,0,1,1]]\n",
@@ -7841,7 +8056,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#437. Path Sum III https://leetcode.com/problems/path-sum-iii/\n"
+   ]
   }
  ],
  "metadata": {
